app/component/itinerary/itinerary.scss
/* ... */
.itinerary-map-action {
  cursor: pointer;
  display: flex;
  height: 100%;
  align-items: center;
  padding-bottom: 6px;

  .icon-container {
    padding-right: 11px;
    margin-top: 4px;

    .icon {
      font-size: 24px;
    }
  }

  @media print {
    display: none;
  }
}

.bp-large .row.itinerary-row .itinerary-instruction-column:not(.to)::after {
  left: 3px;
}

.bp-large .row.itinerary-row {
  margin-left: 0;

  .itinerary-time-column {
    @include font-medium;

    .itinerary-time-column-time {
      font-size: 0.9375rem;
    }

    .icon {
      font-size: 24px;
    }

    .unknown {
      font-size: 24px;
    }

    .icon-badge {
      font-size: 16px;
      top: -1.25em;
    }
  }
}

.row.itinerary-route-information {
  text-align: center;
  left: 2em;
  right: 2em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  border-top: solid 1px $light-gray;
  border-bottom: solid 1px $light-gray;
  width: calc(100% - 2em);

  div {
    border-right: solid 1px $light-gray;

    &.noborder {
      border-right: none;
    }
  }
}

span.itinerary-stop-code {
  @include font-medium;

  color: $gray;
  border: solid 1px $light-gray;
  border-radius: $border-radius-small;
  padding: 1px 4px;
  margin-right: 5px;
  font-size: 0.688rem;
}

div.itinerary-container-content {
  display: flex;
  flex-direction: column;
  position: relative;
  width: 100%;
  height: 100%;
  transition: height 500ms;

  &.minimized {
    max-height: 0;
  }

  &:empty {
    height: 0;
  }
}

.itinerary-slide-container {
  height: 100%;
  overflow: hidden;
  min-height: 100%;
  position: absolute;
  width: 100%;
}

.itinerary-leg-agency {
  @extend .itinerary-leg-text-gray;

  .agency-link-container {
    max-width: calc(100% - 1em);
    white-space: nowrap;
    margin-top: 0.7em;
    margin-bottom: 0.8em;

    .agency-link {
      font-size: 0.625rem;

      a {
        font-weight: $font-weight-medium;
        color: $link-button-color;
        max-width: 100%;
      }

      .external-link-icon-outer {
        color: white;
      }

      .external-link-icon {
        color: $link-button-color;
      }
    }
  }
}

.itinerary-no-route-found {
  margin: 1em;
}

.swipe-header-container {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  box-shadow: none;
  z-index: 10;

  .desktop-view-divider {
    border-top: 1px solid #ddd;
    width: 400px;

    @media print {
      border: none;
    }
  }

  &.swipe-mobile-divider {
    border-bottom: 1px solid #ddd;
    margin-left: 10px;
    margin-right: 10px;
  }

  &.swipe-desktop-view {
    font-size: 12px;

    &.scrolled {
      box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.2);
    }

    .icon-container {
      display: flex;
    }
  }

  @media print {
    display: none;
  }
}

.swipe-header {
  display: flex;
  justify-content: space-evenly;
  padding: 10px 0 10px 0;
  outline: 0;
  width: 100%;

  &.swipe-desktop-view {
    max-width: 250px;
    padding: 15px 0 15px 0;
  }
}

.swipe-tab-indicator {
  min-height: 8px;
  flex-grow: 1;
  justify-content: center;
  align-items: center;
  display: flex;
}

.swipe-tab-ball {
  width: 6px;
  height: 6px;
  border-radius: 50%;
  border: solid 2px $medium-gray;
  background-color: $medium-gray;
  transition: 0.5s;
  margin-right: 5px;
  margin-left: 5px;

  &.selected {
    width: 8px;
    height: 8px;
    border: solid 2px $black;
    background-color: $black;
  }

  &.decreasing {
    width: 4px;
    height: 4px;
  }

  &.decreasing-small {
    width: 2px;
    height: 2px;
    border: solid 1px $medium-gray;
  }

  &.hidden {
    display: none;
  }
}

.swipe-container {
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 200px;
  padding-bottom: 0.7em;
  overflow-x: hidden;
}

.swipe-scroll-wrapper {
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow: hidden;
  background-color: white;
}

.swipe-button-container {
  &.active {
    cursor: pointer;
  }

  display: flex;
  justify-content: center;
  align-items: center;
  flex-grow: 0;
  padding: 0 1em 0 1em;
}

.swipe-button .icon {
  fill: $primary-color;
  height: 1.3em;
  width: 1.3em;
  margin: 0;

  &.disabled {
    fill: $medium-gray;
  }
}

.swipe-scroll-container {
  flex-basis: 0;
  flex-grow: 1;
  overflow-x: hidden;
}

.itinerary-tab {
  @include font-medium;

  letter-spacing: -0.025em;
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  min-height: 100%;
  max-height: 100%;

  .desktop-title {
    .title-container {
      display: flex;
    }
  }
}

@media print {
  .swipeable-tab {
    &.inactive > .itinerary-tab {
      > .itinerary-tabs__scroll {
        display: none;
      }

      > .itinerary-summary-container > .itinerary-summary {
        display: none;
      }
    }

    &.false > .itinerary-tab {
      > .itinerary-tabs__scroll {
        width: 100vw;
      }

      > .itinerary-summary-container {
        width: 100vw;
      }
    }
  }
}

.intermediate-stop-no-stops {
  color: $gray;
  font-weight: $font-weight-book;
  padding-right: 5px;
}

.desktop .itinerary-intermediate-stop-name {
  font-size: 0.9375rem;
}

.itinerary-tab .itinerary-timeframe {
  background-color: $white;
}

.timeframe-nextday {
  background-color: $gray;
  line-height: 1;

  @include font-narrow-medium;

  color: $white;
  border-radius: $border-radius-small;
  padding: $padding-xsmall $padding-small;
}

.date-warning {
  font-size: 0.9375rem;
  padding-left: 1em;
}

.itinerary-heading {
  padding-left: 25px;
  padding-top: 12px;
}

.icon.via {
  color: $black;
}

.itinerary-time-column.via-time-column {
  margin-top: -12px;
}

.via-divider {
  text-align: center;
  overflow: hidden;
  line-height: 1px;
}

.via-divider > .via-divider-line {
  display: inline-block;
  border-top: 1px solid $gray;
  width: 90%;
  margin-right: 5%;
  height: 1px;
}
/* ... */

